--- a/apps/monitoring/grafana/deploy/dashboards-configmap.yaml.j2
+++ b/apps/monitoring/grafana/deploy/dashboards-configmap.yaml.j2
@@ -3,6 +3,9 @@ kind: ConfigMap
 metadata:
   name: grafana-dashboards-config
   namespace: monitoring
+  labels:
+    app: grafana
+    app-component: grafana
 data:
 {% for grafana_dashboard_file in grafana_dashboard_files %}
   {{ grafana_dashboard_file | basename }}: |-
