--- a/apps/monitoring/grafana/deploy/ingress.yaml.j2
+++ b/apps/monitoring/grafana/deploy/ingress.yaml.j2
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: grafana
   namespace: monitoring
+  labels:
+    app: grafana
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: "/"
 spec:
