--- a/apps/monitoring/kubernetes/deploy/kube-controller-manager.yaml.j2
+++ b/apps/monitoring/kubernetes/deploy/kube-controller-manager.yaml.j2
@@ -4,7 +4,8 @@ metadata:
   name: kube-controller-manager-prometheus-discovery
   namespace: kube-system
   labels:
-    k8s-app: kube-controller-manager
+    app: kube-controller-manager
+    app-component: kube-controller-manager
     prometheus-target: kube-controller-manager
 spec:
   selector:
