--- a/apps/monitoring/prometheus-operator/deploy/alertmanager/secret.yaml.j2
+++ b/apps/monitoring/prometheus-operator/deploy/alertmanager/secret.yaml.j2
@@ -1,10 +1,13 @@
 apiVersion: v1
-data:
-{% for alertmanager_config_file in alertmanager_config_files %}
-  {{ alertmanager_config_file | basename | replace(".j2", "") }}: {{ lookup(alertmanager_config_file | regex_search('.j2$') | ternary('template','file'), alertmanager_config_file) | b64encode }}
-{% endfor %}
 kind: Secret
 metadata:
   name: alertmanager-main
   namespace: monitoring
+  labels:
+    app: alertmanager
+    app-component: alertmanager
 type: Opaque
+data:
+{% for alertmanager_config_file in alertmanager_config_files %}
+  {{ alertmanager_config_file | basename | replace(".j2", "") }}: {{ lookup(alertmanager_config_file | regex_search('.j2$') | ternary('template','file'), alertmanager_config_file) | b64encode }}
+{% endfor %}
