--- a/apps/monitoring/prometheus-operator/deploy/ingress.yaml.j2
+++ b/apps/monitoring/prometheus-operator/deploy/ingress.yaml.j2
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: prometheus
   namespace: monitoring
+  labels:
+    app: prometheus
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: "/"
 spec:
