--- a/apps/stream/plex/deploy/statefulSet.yaml.j2
+++ b/apps/stream/plex/deploy/statefulSet.yaml.j2
@@ -5,22 +5,22 @@ metadata:
   namespace: default
   labels:
     app: plex
-    tier: frontend
+    app-component: plex
 spec:
   selector:
     matchLabels:
       app: plex
-      tier: frontend
+      app-component: plex
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
         app: plex
-        tier: frontend
+        app-component: plex
     spec:
       containers:
-      - image: plexinc/pms-docker
+      - image: plexinc/pms-docker:1.14.1.5488-cc260c476
         name: plex
         ports:
         - containerPort: 32400
@@ -30,6 +30,13 @@ spec:
         - name: PLEX_CLAIM
           value: "{{ plex_claim }}"
 {% endif %}
+        resources:
+          requests:
+            cpu: "{{ plex_requests_cpu | default("500m") }}"
+            memory: "{{ plex_requests_memory | default("1024Mi") }}"
+          limits:
+            cpu: "{{ plex_limits_cpu | default("2000m") }}"
+            memory: "{{ plex_limits_memory | default("1024Mi") }}"
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
@@ -58,4 +65,4 @@ spec:
       selector:
         matchLabels:
           app: plex
-          tier: frontend
+          app-component: plex
