--- a/apps/web/ttrss/deploy/pgsql-secret.yaml.j2
+++ b/apps/web/ttrss/deploy/pgsql-secret.yaml.j2
@@ -3,6 +3,9 @@ kind: Secret
 metadata:
   name: ttrss-pgsql-pass
   namespace: default
+  labels:
+    app: ttrss
+    app-component: pgsql
 type: Opaque
 data:
   password: {{ ttrss_pqsql_password | b64encode }}
