--- a/apps/web/ttrss/deploy/ttrss-configMap.yaml.j2
+++ b/apps/web/ttrss/deploy/ttrss-configMap.yaml.j2
@@ -5,7 +5,7 @@ metadata:
   namespace: default
   labels:
     app: ttrss
-    tier: frontend
+    app-component: ttrss
 data:
   nginx_site_config: |
     server {
