--- a/apps/logging/elasticsearch/deploy/ingress.yaml.j2
+++ b/apps/logging/elasticsearch/deploy/ingress.yaml.j2
@@ -6,13 +6,13 @@ metadata:
   labels:
     app: elasticsearch
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: "/"
+    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 spec:
   rules:
   - host: infra.{{ web_base_domain }}
     http:
       paths:
-        - path: /elasticsearch
+        - path: /elasticsearch/?(.*)
           backend:
             serviceName: elasticsearch
             servicePort: 9200
