--- a/apps/monitoring/grafana/deploy/ingress.yaml.j2
+++ b/apps/monitoring/grafana/deploy/ingress.yaml.j2
@@ -6,13 +6,13 @@ metadata:
   labels:
     app: grafana
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: "/"
+    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 spec:
   rules:
   - host: infra.{{ web_base_domain }}
     http:
       paths:
-        - path: /grafana
+        - path: /grafana/?(.*)
           backend:
             serviceName: grafana
             servicePort: 3000
