--- a/apps/monitoring/prometheus-operator/deploy/ingress.yaml.j2
+++ b/apps/monitoring/prometheus-operator/deploy/ingress.yaml.j2
@@ -6,17 +6,17 @@ metadata:
   labels:
     app: prometheus
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: "/"
+    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 spec:
   rules:
   - host: infra.{{ web_base_domain }}
     http:
       paths:
-        - path: /prometheus
+        - path: /prometheus/?(.*)
           backend:
             serviceName: prometheus-k8s
             servicePort: 9090
-        - path: /alertmanager
+        - path: /alertmanager/?(.*)
           backend:
             serviceName: alertmanager-main
             servicePort: 9093
