--- a/apps/infra/dashboard/deploy/ingress.yaml.j2
+++ b/apps/infra/dashboard/deploy/ingress.yaml.j2
@@ -7,6 +7,8 @@ metadata:
     app: kubernetes-dashboard
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^(/kube)$ $1/ permanent;
 spec:
   rules:
   - host: infra.{{ web_base_domain }}
