Switch lemonLDAP image from official to tiredofit image

--- a/apps/auth/lemonldap/config/lemonldap-ng.ini.j2
+++ b/apps/auth/lemonldap/config/lemonldap-ng.ini.j2
@@ -349,10 +349,10 @@ useRedirectOnError = 1
 protection   = none
 
 ; staticPrefix: relative (or URL) location of static HTML components
-staticPrefix = /lemonldap/manager/static
+staticPrefix = /lemonldap/static
 ;
 ; location of HTML templates directory
-templateDir  = /usr/share/lemonldap-ng/manager/htdocs/templates
+templateDir  = /usr/share/lemonldap-ng/manager/templates
 
 ; languages: available languages for manager interface
 languages    = fr, en, vi, ar
