--- a/apps/auth/lemonldap/deploy/ingress-manager.yaml.j2
+++ b/apps/auth/lemonldap/deploy/ingress-manager.yaml.j2
@@ -7,17 +7,21 @@ metadata:
     app: lemonldap
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
-    nginx.ingress.kubernetes.io/upstream-vhost: manager.{{ web_base_domain }}
+    #nginx.ingress.kubernetes.io/upstream-vhost: manager.{{ web_base_domain }}
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      proxy_set_header Accept-Encoding "";
+      sub_filter_types text/html;
+      sub_filter 'href="{{ '{{scriptname}}' }}/diff.html' 'href="/lemonldap{{ '{{scriptname}}' }}/diff.html';
 spec:
   rules:
   - host: infra.{{ web_base_domain }}
     http:
       paths:
-      - path: /lemonldap/manager/?(.*)
+      - path: /lemonldap/?(.*)
         backend:
           serviceName: lemonldap
           servicePort: 80
-      - path: /(manager.fcgi.*)
+      - path: /(manager.psgi.*)
         backend:
           serviceName: lemonldap
           servicePort: 80
@@ -29,7 +33,7 @@ spec:
         backend:
           serviceName: lemonldap
           servicePort: 80
-      - path: /(diff/.*)
+      - path: /(diff.html.*)
         backend:
           serviceName: lemonldap
           servicePort: 80
