--- a/apps/auth/lemonldap/config/lemonldap-ng.ini.j2
+++ b/apps/auth/lemonldap/config/lemonldap-ng.ini.j2
@@ -346,7 +346,7 @@ useRedirectOnError = 1
 ;                    have to set rules in the corresponding virtual host
 ;   * <rule>       : you can set here directly the rule to apply
 ;   * none         : no protection
-protection   = none
+protection   = manager
 
 ; staticPrefix: relative (or URL) location of static HTML components
 staticPrefix = /lemonldap/static
