--- a/apps/auth/lemonldap/config/lmConf.json.j2
+++ b/apps/auth/lemonldap/config/lmConf.json.j2
@@ -4,10 +4,10 @@
    "cfgVersion" : "2.0.2",
    "cfgLog": "{{ ansible_managed }}",
 
-   {# generalParameters > portalParams #}
+{# generalParameters > portalParams #}
    "portal" : "https://auth.{{ web_base_domain }}/",
 
-   {# generalParameters > portalParams > portalMenu #}
+{# generalParameters > portalParams > portalMenu #}
    "applicationList" : {
       "2administration" : {
          "catname" : "Administration",
@@ -69,53 +69,53 @@
       }
    },
 
-   {# generalParameters > portalParams > portalMenu > portalModules #}
+{# generalParameters > portalParams > portalMenu > portalModules #}
    "portalDisplayLogout": 1,
    "portalDisplayChangePassword": "$_auth =~ /^(LDAP|DBI|Demo)$/",
    "portalDisplayAppslist": 1,
    "portalDisplayLoginHistory": 1,
    "portalDisplayOidcConsents": "$_oidcConnectedRP",
-   {# generalParameters > portalParams > portalCustomization #}
+{# generalParameters > portalParams > portalCustomization #}
    "portalMainLogo": "common/logos/logo_llng_400px.png",
    "showLanguages": 1,
    "portalSkin" : "bootstrap",
    "portalSkinBackground" : "1280px-Cedar_Breaks_National_Monument_partially.jpg",
    "portalSkinRules": {},
-   {# generalParameters > portalParams > portalCustomization > portalButtons #}
+{# generalParameters > portalParams > portalCustomization > portalButtons #}
    "portalCheckLogins": 1,
    "portalDisplayResetPassword": 0,
    "passwordResetAllowedRetries": 3,
    "portalDisplayRegister": 1,
-   {# generalParameters > portalParams > portalCustomization > passwordManagement #}
+{# generalParameters > portalParams > portalCustomization > passwordManagement #}
    "portalRequireOldPassword": 1,
    "hideOldPassword": 0,
    "mailOnPasswordChange": 0,
-   {# generalParameters > portalParams > portalCustomization > portalOther #}
+{# generalParameters > portalParams > portalCustomization > portalOther #}
    "portalUserAttr": "_user",
    "portalOpenLinkInNewWindow": 0,
    "portalAntiFrame": 1,
    "portalPingInterval": 60000,
    "portalErrorOnExpiredSession": 1,
    "portalErrorOnMailNotFound": 0,
-   {# generalParameters > portalParams > portalCaptcha #}
+{# generalParameters > portalParams > portalCaptcha #}
    "captcha_login_enabled": 0,
    "captcha_mail_enabled": 1,
    "captcha_register_enabled": 1,
    "captcha_size": 6,
 
-   {# generalParameters > authParams #}
+{# generalParameters > authParams #}
    "authentication": "LDAP",
    "userDB": "LDAP",
    "passwordDB": "LDAP",
    "registerDB": "LDAP",
-   {# generalParameters > authParams > ldapParams #}
+{# generalParameters > authParams > ldapParams #}
    "ldapAuthnLevel": 2,
    "ldapExportedVars": {
        "uid": "uid",
        "mail": "mail",
        "cn": "cn"
    },
-   {# generalParameters > authParams > ldapParams > ldapConnection #}
+{# generalParameters > authParams > ldapParams > ldapConnection #}
    "ldapServer": "ldap+tls://openldap/cafile=/var/lib/lemonldap-ng/server-certs/ca.crt",
    "ldapPort": 389,
    "ldapBase": "{{ lemonldap_ldap_base }}",
@@ -124,12 +124,12 @@
    "ldapTimeout": 30,
    "ldapVersion": 3,
    "ldapRaw": "", {# Binary attributes #}
-   {# generalParameters > authParams > ldapParams > ldapFilters #}
+{# generalParameters > authParams > ldapParams > ldapFilters #}
    "LDAPFilter": "",
    "AuthLDAPFilter": "(&(uid=$user)(objectClass=inetOrgPerson))",
    "mailLDAPFilter": "(&(mail=$mail)(objectClass=inetOrgPerson))",
    "ldapSearchDeref": "find",
-   {# generalParameters > authParams > ldapParams > ldapGroups #}
+{# generalParameters > authParams > ldapParams > ldapGroups #}
    "ldapGroupBase": "{{ openldap_ldap_structure_groups_ou_dn }}",
    "ldapGroupObjectClass": "groupOfNames",
    "ldapGroupAttributeName": "member",
@@ -138,7 +138,7 @@
    "ldapGroupDecodeSearchedValue": 0,
    "ldapGroupRecursive": 0,
    "ldapGroupAttributeNameGroup": "dn",
-   {# generalParameters > authParams > ldapParams > ldapPassword #}
+{# generalParameters > authParams > ldapParams > ldapPassword #}
    "ldapPpolicyControl": 1,
    "ldapSetPassword": 0,
    "ldapChangePasswordAsUser": 1,
@@ -148,23 +148,23 @@
    "ldapPasswordResetAttributeValue": "TRUE",
    "ldapAllowResetExpiredPassword": 1,
 
-   {# generalParameters > logParams #}
+{# generalParameters > logParams #}
    "whatToTrace" : "_whatToTrace",
    "hiddenAttributes": "_password",
-   {# generalParameters > cookieParams #}
+{# generalParameters > cookieParams #}
    "cookieName" : "lemonldap",
    "domain" : "{{ web_base_domain }}",
    "cda": 0,
    "securedCookie": 0,
    "httpOnly": 1,
    "cookieExpiration": 0,
-   {# generalParameters > sessionParams #}
+{# generalParameters > sessionParams #}
    "storePassword": 0,
    "timeout": 72000,
    "timeoutActivity": 0,
    "timeoutActivityInterval": 60,
    "grantSessionRules": {},
-   {# generalParameters > sessionParams > sessionStorage #}
+{# generalParameters > sessionParams > sessionStorage #}
    "globalStorage" : "Apache::Session::File",
    "globalStorageOptions": {
        "Directory": "/var/lib/lemonldap-ng/sessions",
@@ -179,42 +179,42 @@
       "directory_umask" : "007",
       "namespace" : "lemonldap-ng-sessions"
    },
-   {# generalParameters > sessionParams > multipleSessions #}
+{# generalParameters > sessionParams > multipleSessions #}
    "singleSession": 0,
    "singleIP": 0,
    "singleUserByIP": 0,
    "singleSessionUserByIP": 0,
    "notifyDeleted": 1,
    "notifyOther": 0,
-   {# generalParameters > sessionParams > persistentSessions #}
+{# generalParameters > sessionParams > persistentSessions #}
    "persistentStorage" : "Apache::Session::File",
    "persistentStorageOptions" : {
       "Directory" : "/var/lib/lemonldap-ng/psessions",
       "LockDirectory" : "/var/lib/lemonldap-ng/psessions/lock"
    },
-   {# generalParameters > reloadParams #}
+{# generalParameters > reloadParams #}
    "reloadUrls" : {
       "localhost" : "https://infra.{{ web_base_domain }}/reload"
    },
    "reloadTimeout": 5,
 
-   {# generalParameters > plugins #}
+{# generalParameters > plugins #}
    "stayConnected": 0,
    "portalStatus": 0,
    "upgradeSession": 1,
-   {# generalParameters > plugins > portalServers #}
+{# generalParameters > plugins > portalServers #}
    "wsdlServer": 0,
    "restSessionServer": 0,
    "restConfigServer": 0,
    "soapSessionServer": 0,
    "soapConfigServer": 0,
    "exportedAttr": "",
-   {# generalParameters > plugins > loginHistory #}
+{# generalParameters > plugins > loginHistory #}
    "loginHistoryEnabled" : 1,
    "successLoginNumber": 5,
    "failedLoginNumber": 5,
    "sessionDataToRemember" : {},
-   {# generalParameters > plugins > notifications #}
+{# generalParameters > plugins > notifications #}
    "notification": 1,
    "notificationServer": 0,
    "oldNotifFormat": 0,
@@ -224,27 +224,27 @@
    },
    "notificationWildcard": "allusers",
    "notificationXSLTfile": "",
-   {# generalParameters > plugins > passwordManagement > mailContent #}
+{# generalParameters > plugins > passwordManagement > mailContent #}
    "mailSubject": "",
    "mailBody": "",
    "mailConfirmSubject": "",
    "mailConfirmBody": "",
-   {# generalParameters > plugins > passwordManagement > mailOther #}
+{# generalParameters > plugins > passwordManagement > mailOther #}
    "mailUrl" : "https://auth.{{ web_base_domain }}/resetpwd",
    "mailTimeout": 0,
    "randomPasswordRegexp": "[A-Z]{3}[a-z]{5}.\\d{2}",
-   {# generalParameters > plugins > register #}
+{# generalParameters > plugins > register #}
    "registerUrl" : "https://auth.{{ web_base_domain }}/register",
    "registerTimeout": 0,
    "registerConfirmSubject": "",
    "registerDoneSubject": "",
-   {# generalParameters > plugins > autoSignin #}
+{# generalParameters > plugins > autoSignin #}
    "autoSigninRules": {},
-   {# generalParameters > plugins > stateCheck #}
+{# generalParameters > plugins > stateCheck #}
    "checkState": 0,
    "checkStateSecret": "",
 
-   {# generalParameters > secondFactors #}
+{# generalParameters > secondFactors #}
    "available2FSelfRegistration": "TOTP,U2F,Yubikey",
    "available2F": "UTOTP,TOTP,U2F,REST,Mail2F,Ext2F,Yubikey",
    "max2FDevices": 10,
@@ -252,10 +252,10 @@
    "sfEngine": "::2F::Engines::Default",
    "sfRequired": 0,
 
-   {# generalParameters > secondFactors > utotp2f #}
+{# generalParameters > secondFactors > utotp2f #}
    "utotp2fActivation": 0,
    "utotp2fAuthnLevel": 4,
-   {# generalParameters > secondFactors > totp #}
+{# generalParameters > secondFactors > totp #}
    "totp2fActivation": 0,
    "totp2fSelfRegistration": 0,
    "totp2fAuthnLevel": 4,
@@ -266,12 +266,12 @@
    "totp2fDisplayExistingSecret": 0,
    "totp2fUserCanChangeKey": 0,
    "totp2fUserCanRemoveKey": 1,
-   {# generalParameters > secondFactors > u2f #}
+{# generalParameters > secondFactors > u2f #}
    "u2fActivation": 0,
    "u2fSelfRegistration": 0,
    "u2fAuthnLevel": 4,
    "u2fUserCanRemoveKey": 1,
-   {# generalParameters > secondFactors > mail2f #}
+{# generalParameters > secondFactors > mail2f #}
    "mail2fActivation": 0,
    "mail2fCodeRegex": "\\d{6}",
    "mail2fTimeout": 120,
@@ -279,13 +279,13 @@
    "mail2fBody": "",
    "mail2fAuthnLevel": "",
    "mail2fLogo": "",
-   {# generalParameters > secondFactors > external2f #}
+{# generalParameters > secondFactors > external2f #}
    "ext2fActivation": 0,
    "ext2FSendCommand": "",
    "ext2FValidateCommand": "",
    "ext2fAuthnLevel": "",
    "ext2fLogo": "",
-   {# generalParameters > secondFactors > rest2f #}
+{# generalParameters > secondFactors > rest2f #}
    "rest2fActivation": 0,
    "rest2fInitUrl": "",
    "rest2fInitArgs": {},
@@ -293,7 +293,7 @@
    "rest2fVerifyArgs": {},
    "rest2fAuthnLevel": 2, 
    "rest2fLogo": "",
-   {# generalParameters > secondFactors > yubikey2f #}
+{# generalParameters > secondFactors > yubikey2f #}
    "yubikey2fActivation": 0,
    "yubikey2fSelfRegistration": 0,
    "yubikey2fAuthnLevel": 4,
@@ -304,12 +304,12 @@
    "yubikey2fPublicIDSize": 12,
    "yubikey2fUserCanRemoveKey": 1,
 
-   {# generalParameters > advancedParams #}
+{# generalParameters > advancedParams #}
    "customFunctions": "",
    "multiValuesSeparator": "; ",
    "nginxCustomHandlers": {},
    "logoutServices": {},
-   {# generalParameters > advancedParams > SMTP #}
+{# generalParameters > advancedParams > SMTP #}
    "mailSessionKey": "mail",
    "SMTPServer": "{{ lemonldap_smtp_host }}",
    "SMTPPort": {{ lemonldap_smtp_port }},
@@ -317,15 +317,15 @@
    "SMTPAuthPass": "{{ lemonldap_smtp_password }}",
    "SMTPTLS": "{{ lemonldap_smtp_tls }}",
    "SMTPTLSOpts": {},
-   {# generalParameters > advancedParams > SMTP > mailHeaders #}
+{# generalParameters > advancedParams > SMTP > mailHeaders #}
    "mailFrom": "{{ lemonldap_smtp_from }}",
    "mailReplyTo": "{{ lemonldap_smtp_replyTo }}",
    "mailCharset": "utf-8",
-   {# generalParameters > advancedParams > security #}
+{# generalParameters > advancedParams > security #}
    "userControl": "^[\\w\\.\\-@]+$",
    "portalForceAuthn": 0,
    "portalForceAuthnInterval": 5,
-   {# "key": "", #}
+{# "key": "", #}
    "trustedDomains": "",
    "useSafeJail": 1,
    "checkXSS": 1,
@@ -338,7 +338,7 @@
    "tokenUseGlobalStorage": 0,
    "lwpOpts": {},
    "lwpSslOpts": {},
-   {# generalParameters > advancedParams > security > contentSecurityPolicy #}
+{# generalParameters > advancedParams > security > contentSecurityPolicy #}
    "cspDefault": "'self'",
    "cspImg": "'self' data:",
    "cspScript": "'self'",
@@ -346,34 +346,39 @@
    "cspFont": "'self'",
    "cspFormAction": "'self'",
    "cspConnect": "'self'",
-   {# generalParameters > advancedParams > redirection #}
+{# generalParameters > advancedParams > redirection #}
    "https": -1,
    "port": -1,
    "useRedirectOnForbidden": 0,
    "useRedirectOnError": 1,
    "maintenance": 0,
-   {# generalParameters > advancedParams > portalRedirection #}
+{# generalParameters > advancedParams > portalRedirection #}
    "jsRedirect": 0,
    "noAjaxHook": 0,
    "skipRenewConfirmation": 0,
-   {# generalParameters > advancedParams > forms #}
+{# generalParameters > advancedParams > forms #}
    "infoFormMethod": "get",
    "confirmFormMethod": "post",
    "redirectFormMethod": "get",
    "activeTimer": 1,
 
-   {# variables #}
+{# variables #}
    "exportedVars": {},
    "macros": {
        "_whatToTrace": "$_auth eq 'SAML' ? \"$_user\\@$_idpConfKey\" : $_auth eq 'OpenIDConnect' ? \"$_user\\@$_oidcConnectedRP\" : \"$_user\"",
        "UA": "$ENV{HTTP_USER_AGENT}"
    },
    "groups": {},
-   {# virtualHosts #}
+{# virtualHosts #}
    "locationRules" : {
-      "infra.{{ web_base_domain }}" : {
-         "default" : "accept"
-      }
+{% for locationRule in lemonldap_location_rules %}
+   {% set locationLoop = loop %}
+      "{{ locationRule.domain }}" : {
+      {% for ruleName, ruleValue in locationRule.rules.items() %}
+         "{{ ruleName }}" : "{{ ruleValue }}"{% if not loop.last %},{% endif %}
+      }{% if not locationLoop.last %},{% endif %}
+      {% endfor %}
+{% endfor %}
    },
    "exportedHeaders" : {},
    "vhostOptions": {
@@ -383,15 +388,15 @@
       }
    }
 
-   {# samlServiceMetaData #}
-   {# samlIDPMetaDataNodes #}
-   {# samlSPMetaDataNodes #}
-   {# oidcServiceMetaData #}
-   {# oidcOPMetaDataNodes #}
-   {# oidcRPMetaDataNodes #}
-   {# casServiceMetadata #}
-   {# casSrvMetaDataNodes #}
-   {# casAppMetaDataNodes #}
+{# samlServiceMetaData #}
+{# samlIDPMetaDataNodes #}
+{# samlSPMetaDataNodes #}
+{# oidcServiceMetaData #}
+{# oidcOPMetaDataNodes #}
+{# oidcRPMetaDataNodes #}
+{# casServiceMetadata #}
+{# casSrvMetaDataNodes #}
+{# casAppMetaDataNodes #}
 
 }
  
