Pin tt-rss image

--- a/apps/web/ttrss/deploy/ttrs-deployment.yaml.j2
+++ b/apps/web/ttrss/deploy/ttrs-deployment.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: ttrss
     spec:
       containers:
-      - image: linuxserver/tt-rss
+      - image: linuxserver/tt-rss:amd64-19.2-ls6
         name: ttrss
 # TODO inject TT-RSS configuration after the image is updated
 #        env:
