Fix changed paths

--- a/apps/web/ttrss/deploy/ttrss-configMap.yaml.j2
+++ b/apps/web/ttrss/deploy/ttrss-configMap.yaml.j2
@@ -10,7 +10,7 @@ data:
   nginx_site_config: |
     server {
       listen 80 default_server;
-      root /config/www/tt-rss;
+      root /var/www/html;
       index index.html index.htm index.php;
 
       server_name _;
@@ -21,7 +21,7 @@ data:
       client_max_body_size 0;
 
       location {{ ttrss_context_root }} {
-        {% if ttrss_context_root != "/" %}alias /config/www/tt-rss;{% endif %}
+        {% if ttrss_context_root != "/" %}alias /var/www/html;{% endif %}
         
         try_files $uri $uri/ /index.html /index.php?$args =404;
 
