--- a/apps/auth/lemonldap/config/lmConf.json.j2
+++ b/apps/auth/lemonldap/config/lmConf.json.j2
@@ -17,7 +17,7 @@
                "display" : "auto",
                "logo" : "configure.png",
                "name" : "WebSSO Manager",
-               "uri" : "https://infra.{{ web_base_domain }}/lemonldap/manager/manager.html"
+               "uri" : "https://infra.{{ web_base_domain }}/lemonldap/manager.html"
             },
             "type" : "application"
          },
@@ -27,7 +27,7 @@
                "display" : "auto",
                "logo" : "database.png",
                "name" : "Notifications explorer",
-               "uri" : "https://infra.{{ web_base_domain }}/lemonldap/manager/notifications.html"
+               "uri" : "https://infra.{{ web_base_domain }}/lemonldap/notifications.html"
             },
             "type" : "application"
          },
@@ -37,7 +37,7 @@
                "display" : "auto",
                "logo" : "database.png",
                "name" : "Sessions explorer",
-               "uri" : "https://infra.{{ web_base_domain }}/lemonldap/manager/sessions.html"
+               "uri" : "https://infra.{{ web_base_domain }}/lemonldap/sessions.html"
             },
             "type" : "application"
          },
