--- a/apps/auth/lemonldap/deploy/ingress-manager.yaml.j2
+++ b/apps/auth/lemonldap/deploy/ingress-manager.yaml.j2
@@ -25,7 +25,7 @@ spec:
         backend:
           serviceName: lemonldap
           servicePort: 80
-      - path: /(static/bwr/.*)
+      - path: /(static/.*)
         backend:
           serviceName: lemonldap
           servicePort: 80
