Add missing LemonLDAP config. It allows saving via the manager

--- a/apps/auth/lemonldap/config/lmConf.json.j2
+++ b/apps/auth/lemonldap/config/lmConf.json.j2
@@ -277,17 +277,17 @@
    "mail2fTimeout": 120,
    "mail2fSubject": "",
    "mail2fBody": "",
-   "mail2fAuthnLevel": "",
+   "mail2fAuthnLevel": 2,
    "mail2fLogo": "",
 {# generalParameters > secondFactors > external2f #}
    "ext2fActivation": 0,
    "ext2FSendCommand": "",
    "ext2FValidateCommand": "",
-   "ext2fAuthnLevel": "",
+   "ext2fAuthnLevel": 2,
    "ext2fLogo": "",
 {# generalParameters > secondFactors > rest2f #}
    "rest2fActivation": 0,
-   "rest2fInitUrl": "",
+   "rest2fInitUrl": "http://disabled",
    "rest2fInitArgs": {},
    "rest2fVerifyUrl": "",
    "rest2fVerifyArgs": {},
