Migrate LDAP group from GroupOfNames to GroupOfUniqueNames.
Allows using the memberOf overlay in the OpenLDAP container.

--- a/apps/auth/lemonldap/config/lmConf.json.j2
+++ b/apps/auth/lemonldap/config/lmConf.json.j2
@@ -131,8 +131,8 @@
    "ldapSearchDeref": "find",
 {# generalParameters > authParams > ldapParams > ldapGroups #}
    "ldapGroupBase": "{{ lemonldap_ldap_group_base }}",
-   "ldapGroupObjectClass": "groupOfNames",
-   "ldapGroupAttributeName": "member",
+   "ldapGroupObjectClass": "groupOfUniqueNames",
+   "ldapGroupAttributeName": "uniqueMember",
    "ldapGroupAttributeNameUser": "dn",
    "ldapGroupAttributeNameSearch": "cn",
    "ldapGroupDecodeSearchedValue": 0,
