Inject Gitlab configuration via ConfigMap instead of preparing the volume

--- a/apps/dev/gitlab/deploy/statefulSet.yaml.j2
+++ b/apps/dev/gitlab/deploy/statefulSet.yaml.j2
@@ -6,6 +6,8 @@ metadata:
   labels:
     app: gitlab
     app-component: gitlab
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
@@ -49,10 +51,16 @@ spec:
           mountPath: /etc/gitlab
         - name: gitlab-data-pv-claim
           mountPath: /var/opt/gitlab
+        - name: gitlab-config-volume
+          mountPath: /etc/gitlab/gitlab.rb
+          subPath: gitlab.rb
       volumes:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: gitlab-config-volume
+        configMap:
+          name: gitlab
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
